--- a/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
@@ -38,26 +38,23 @@
     <div class="btn-group btn-group-justified">
 
         <a id="participated" class="btn btn-primary">Participated</a>
-        <a id="organised" class="btn btn-primary">organised</a>
-        <a id="interested" class="btn btn-primary">interested</a>
+        <a id="organised" class="btn btn-primary">Organised</a>
+        <a id="interested" class="btn btn-primary">Interested</a>
     </div>
-    <!-- Second Container -->
+    <!-- Participated -->
     <div id="goingContent" class="hidden">
         <div class="container-fluid  text-center BG-2 myContainer">
-            <h3 class="profileMargin">Experienced</h3>
+            <h3 class="profileMargin">experienced and future events</h3>
             @if (Model.Owner)
             {
-
                 @Html.ActionLink("New Event", "CreateEvent", "Event", null, new { @class = "btn btn-lg btn-danger" });
-
             }
             @if (ViewBag.EventsParticipated == null)
             {
-                <p class="myP"> No events history to display. Sorry, you have no life.</p>
+                <p class="myP"> No events history to display </p>
             }
             else
             {
-
                 <div style="overflow-x:auto;">
                     <table class="table">
                         <thead>
@@ -83,25 +80,20 @@
         </div>
     </div>
 
-    <!-- Third Container (Grid) -->
+    <!--Organised-->
     <div id="partContent" class="visible">
         <div class="container-fluid  text-center BG-2 myContainer">
-            <h3 class="profileMargin">Contributed</h3><br>
+            <h3 class="profileMargin">organised events</h3>
             @if (Model.Owner)
             {
-
                 @Html.ActionLink("New Event", "CreateEvent", "Event", null, new { @class = "btn btn-lg btn-danger" });
-
             }
-            <p class="myP">
-            </p>
             @if (ViewBag.EventsMade == null)
             {
-                <p class="myP"> No events history to display. Sorry, you have no life.</p>
+                <p class="myP"> No events history to display</p>
             }
             else
             {
-
                 <div style="overflow-x:auto;">
                     <table class="table" style="overflow-x:auto;">
                         <thead>
@@ -125,7 +117,7 @@
                                         {
                                             @:
                                         <td style="color: #555555;">
-                                            @Html.ActionLink("Edit", "EditEvent", "Event", new { id = e.EventId }, null);
+                                            @Html.ActionLink("Edit", "EditEvent", "Event", new { id = e.EventId }, null)
                                         </td>
                                         }
                                     </tr>
@@ -136,48 +128,42 @@
         </div>
     </div>
 
-
+    <!--interested-->
     <div id="interContent" class="hidden">
         <div class="container-fluid  text-center BG-2 myContainer">
-            <h3 class="profileMargin">Interested</h3><br>
+            <h3 class="profileMargin">Interested</h3>
             @if (Model.Owner)
             {
-
                 @Html.ActionLink("New Event", "CreateEvent", "Event", null, new { @class = "btn btn-lg btn-danger" });
-
             }
-            <p class="myP">
-            </p>
             @if (ViewBag.EventsMade == null)
             {
                 <p class="myP"> No events history to display. Sorry, you have no life.</p>
             }
             else
-            {
-
-                <div style="overflow-x:auto;">
-                    <table class="table" style="overflow-x:auto;">
-                        <thead>
-                            <tr>
-                                <th>Eventname</th>
-                                <th>Date</th>
-                                <th>Participants</th>
-                                <th>Location</th>
+            {   <div style="overflow-x:auto;">
+                <table class="table" style="overflow-x:auto;">
+                    <thead>
+                        <tr>
+                            <th>Eventname</th>
+                            <th>Date</th>
+                            <th>Participants</th>
+                            <th>Location</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (Event e in ViewBag.eventsinterested)
+                        {
+                            <tr class="warning">
+                                <td>@Html.ActionLink(e.EventName, "EventDetails", "Event", new { id = e.EventId }, null) </td>
+                                <td style="color: #555555;">@e.EventEndDate </td>
+                                <td style="color: #555555;">@e.EventParticipants </td>
+                                <td style="color: #555555;">@e.EventLocation</td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (Event e in ViewBag.eventsinterested)
-                            {
-                                <tr class="warning">
-                                    <td>@Html.ActionLink(e.EventName, "EventDetails", "Event", new { id = e.EventId }, null) </td>
-                                    <td style="color: #555555;">@e.EventEndDate </td>
-                                    <td style="color: #555555;">@e.EventParticipants </td>
-                                    <td style="color: #555555;">@e.EventLocation</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>}
+                        }
+                    </tbody>
+                </table>
+            </div>}
         </div>
     </div>
     <!-- Footer bg-4-->
