--- a/WebApplication1/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <div class="checkbox">
+                                <div class="checkbox" style="margin-left:20px;">
                                     @Html.CheckBoxFor(m => m.RememberMe)
                                     @Html.LabelFor(m => m.RememberMe)
                                 </div>
@@ -46,15 +46,10 @@
                                 <input type="submit" value="Log in" class="btn btn-default" />
                             </div>
                         </div>
-
-                        <p>
+                        <p style="margin-left:15px">
                             @Html.ActionLink("Register as a new user", "Register")
                         </p>
                     </div>
-                    @* Enable this once you have account confirmation enabled for password reset functionality
-                        <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                        </p>*@
                 }
             </section>
         </div>
